<resources>
    <string name="app_name">PLow</string>
    <string name="title_activity_calendar">TimeLine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--*******************TextView**********************-->
    <string name="text_ask_me">What can i help you\ndo now?</string>
    <string name="text_ask_voice">What can i help you?</string>
    <string name="text_ask_alarm">Do you want set the alarm before sleeping?</string>

    <!--******************Voice recognization****************-->
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_add_alarm">alarm</string>
    <string name="speech_add_yes">yes</string>
    <string name="speech_add_no">no</string>
    <string name="speech_command_insupported">Sorry! unsupported command!</string>
    <string name="speech_time">Okey! what time?</string>
    <string name="speech_alarm_added">Good! Alarm added</string>
    <string name="speech_show_calendar">calendar</string>
    <string name="speech_show_stats">stats</string>
    <string name="speech_okey">Okey!</string>

    <!--******************Gmail recycler view***********************-->

    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    
    <!--****************Menu***********************************-->
    
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_add">Add</string>

    <!--**************Toasts*****************************-->

    <string name="toast_date_copied">Day copied!</string>
    <string name="toast_date_nothing_copied">Nothing to be copied!</string>
    <string name="toast_date_passed">Date passed!</string>

    <!--***************Arrays***************-->
    <string-array name="side_bar_titles">
        <item>Time line</item>
        <item>Stats</item>
        <item>Ask Me</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="title_activity_pairing">Plow</string>
    <string name="connecting">Connecting...</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--**************Services*****************-->
    <string name="service_alarm_manager">com.example.AlarmExample</string>
    <string name="service_name">Service Bluetooth</string>


    <!--********************Colors***********-->
    <string-array name="graph_clors">
        <item>#F44336</item>
        <item>#E91E63</item>
        <item>#9C27B0</item>
        <item>#3F51B5</item>
        <item>#2196F3</item>
        <item>#00BCD4</item>
        <item>#009688</item>
        <item>#4CAF50</item>
        <item>#FFEB3B</item>
        <item>#FF9800</item>
        <item>#795548</item>
        <item>#9E9E9E</item>
    </string-array>

    <!--******************Stats**************-->
    <string name="text_time_slept">Time selpt</string>
    <string name="text_time_wake">Time woke</string>

    <!--*****************test***************-->
    <string name="pref_header_general">General</string>
    <string name="pref_header_vibration">Vibration</string>
    <string name="pref_header_alarm_check">Alarm check</string>
    <string name="pref_title_alarm_reminder">Alarm reminder</string>
    <string name="pref_title_language">language</string>
    <string name="pref_language">Select your language</string>

    <string-array name="pref_array_languages">
        <item>Arabic</item>
        <item>French</item>
        <item>English</item>
    </string-array>

    <string-array name="pref_array_languages_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="pref_title_vibration_duration">Vibration duration</string>
    <string name="pref_vibration_duration">Select the vibration duration</string>

    <string-array name="pref_array_vibration_duration">
        <item>25 s</item>
        <item>35 s</item>
        <item>45 s</item>
        <item>1 m</item>
    </string-array>

    <string-array name="pref_array_vibration_duration_values">
        <item>25</item>
        <item>35</item>
        <item>45</item>
        <item>60</item>
    </string-array>


    <string name="pref_title_vibration_power">Vibration power</string>
    <string name="pref_vibration_power">Select the vibration power</string>

    <string-array name="pref_array_vibration_power">
        <item>1 V</item>
        <item>2 V</item>
        <item>3 V</item>
        <item>4 V</item>
        <item>5 V</item>
    </string-array>

    <string-array name="pref_array_vibration_power_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_night">Night</string>
    <string name="pref_night">Select the sleep average</string>

    <string-array name="pref_array_night">
        <item>4 h</item>
        <item>5 h</item>
        <item>6 h</item>
        <item>7 h</item>
        <item>8 h</item>
        <item>9 h</item>
        <item>10 h</item>
    </string-array>

    <string-array name="pref_array_night_values">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="pref_title_day">Day</string>
    <string name="pref_day">Select the sleep average</string>

    <string-array name="pref_array_day">
        <item>1 h</item>
        <item>2 h</item>
        <item>3 h</item>
        <item>4 h</item>
        <item>5 h</item>
    </string-array>

    <string-array name="pref_array_day_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
